// person.proto

syntax = "proto3";  // Use Protocol Buffers version 3

package Test;

message Person {
  string name = 1;  // Field numbers are 1-based
  string address = 2;
  repeated string list_of_jobs = 3;  // Repeated field for a vector of strings
  string cur_job = 4;
  double cur_salary = 5;
}
